--- a/HTML/assets/css/slick-custom.css
+++ b/HTML/assets/css/slick-custom.css
@@ -1,72 +1,112 @@
-*{ margin:0px; padding:0px; }
+/*
+font-family: 'Lobster', cursive;
+font-family: 'Roboto Slab', serif;
+font-family: 'Raleway', sans-serif;
+*/
 
+
+*{ margin:0px; padding:0px; }
 .slick-animated-slider .slick-slide{
-    height:600px; overflow: hidden;
+    height:800px; overflow: hidden; font-family: 'Roboto Slab', serif;
 }
-.slick-animated-slider .slick-slide.slick-active .animatedBg{
-    width:100%; height:100%; object-fit: cover;
-    -webkit-animation: mymove 10s linear;
-  animation: mymove 10s linear;
+.slick-animated-slider .slick-slide .slider-overlay{
+  width:100%; height:100%; position: absolute; top:0px; left:0px; background: rgba(110, 180, 193, 0.3); z-index: 1; display: none;
 }
-.slick-animated-slider .slick-slide.slick-active .animatedBgRevese {
-    width:100%; height:100%; object-fit: cover;
-  -webkit-animation: mymoveRevese 10s linear;
-  animation: mymoveRevese 10s linear;
+.slick-animated-slider .slick-slide .slider-banner-image{
+  position: relative; top:0px; left:0px; width:100%;
+}
+.slick-animated-slider .slick-slide .animatedBg{
+  width:100%; height:100%; object-fit: cover;
+}
+/* .slick-active */
+.slick-animated-slider .slick-slide .animatedBg{
+  -webkit-animation: mymove 35s linear;  /* Safari 4.0 - 8.0 */ animation: mymove 35s linear;
+  /*-webkit-animation-fill-mode: forwards; /* Safari 4.0 - 8.0 */ /*animation-fill-mode: forwards;*/
+  animation-iteration-count: infinite; -webkit-animation-iteration-count: infinite;
 }
 
 .slick-animated-slider .slick-slide .slick-content-area{
-    width:100%;
-    position: absolute;
-    z-index: 1;
-    top:50%;
-    left:0px;
-    transform: translate(0px, -50%);
-    -webkit-transform: translate(0px, -50%);
-    background: #ff0000;
+    width:100%; position: absolute; z-index: 2; top:50%; left:0px; transform: translate(0px, -50%); -webkit-transform: translate(0px, -50%); text-align: center;
+}
+.slick-animated-slider .slick-slide .subheading{ 
+  font-size:28px; display:inline-block; padding:0px 20px 5px 20px; margin:0px; color:#fff; font-family: 'Roboto Slab', serif; background-color: rgb(17, 92, 161);
+}
+.slick-animated-slider .slick-slide .heading{ 
+  font-size:80px; display:inline-block; margin:0px 0px 10px 0px; font-weight:900; color:#fff; font-family: 'Raleway', sans-serif; text-shadow:#6e6e6e 3px 3px 0px;
+}
+.slick-animated-slider .slick-slide p{
+  color:#fff; margin:0px 0px 30px 0px; font-size:20px; max-width:600px; width:100%; display:inline-block;
+}
+.slick-animated-slider .slick-slide a.link{
+  display: inline-block; padding:12px 35px; font-size:16px; background: rgb(17, 92, 161); border-radius:50px; color:#fff; font-family: 'Raleway', sans-serif; text-decoration: none;
 }
 
-.slick-active .fadeInLeft {
-  -webkit-animation-name: fadeInLeft;
-  animation-name: fadeInLeft;
-  -webkit-animation-duration: 1s; 
-  animation-duration: 1s; 
-  -webkit-animation-fill-mode: both; 
-  animation-fill-mode: both;
-  -webkit-animation-delay: 1s; 
-  animation-delay: 1s;
-}
-
-/* Safari 4.0 - 8.0 */
 @-webkit-keyframes mymove {
-  from { transform: scale(1.0, 1.0);}
-  to {transform: scale(1.3, 1.);}
+  0% { transform: scale(1.0, 1.0);}
+  50% {transform: scale(1.3, 1.3); }
+  100% { transform: scale(1.0, 1.0);}
 }
 
 /* Standard syntax */
 @keyframes mymove {
-  from { transform: scale(1.0, 1.0);}
-  to {transform: scale(1.3, 1.3);}
-}
-
-/* Safari 4.0 - 8.0 */
-@-webkit-keyframes mymoveRevese {
-  from { transform: scale(1.3, 1.3);}
-  to {transform: scale(1.0, 1.0);}
-}
-
-/* Standard syntax */
-@keyframes mymoveRevese {
-  from { transform: scale(1.3, 1.3);}
-  to {transform: scale(1.0, 1.0);}
+  0% { transform: scale(1.0, 1.0);}
+  50% {transform: scale(1.3, 1.3); }
+  100% { transform: scale(1.0, 1.0);}
 }
 
 
-@-webkit-keyframes fadeInLeft {
-  0% { opacity: 0; -webkit-transform: translateX(-400px); transform: translateX(-400px); }
-  100% { opacity: 1; -webkit-transform: translateX(0); transform: translateX(0); }
+/* slider nav css */
+.slick-animated-slider .slick-dots{
+  position: absolute; bottom:10px; left:50%; transform: translate(-50%, 0px); -webkit-transform: translate(-50%, 0px); z-index: 1;
+}
+.slick-animated-slider .slick-dots li{
+  display: inline-block; list-style: none; margin:0px 5px;
+}
+.slick-animated-slider .slick-dots li button{
+  color:transparent; width:40px; height:7px; border:none; background: #fff; cursor: pointer; outline: none; transition: all ease 0.3s; -webkit-transition: all ease 0.3s;
+  box-shadow: #444343 0px 0px 3px 1px; -webkit-box-shadow: #444343 0px 0px 3px 1px;
+}
+.slick-animated-slider .slick-dots li.slick-active button{
+  background-color: #24f5fb;
 }
 
-@keyframes fadeInLeft {
-  0% { opacity: 0;-webkit-transform: translateX(-400px);  -ms-transform: translateX(-400px); transform: translateX(-400px); }
-  100% { opacity: 1; -webkit-transform: translateX(0); -ms-transform: translateX(0); transform: translateX(0); }
+
+.slick-animated-slider .slick-arrow{
+  width:40px; height:40px; position: absolute; z-index: 1; top:50%; margin-top:-20px; background:transparent; color:transparent; border:none; overflow: hidden; outline: none; cursor: pointer;
 }
+.slick-animated-slider .slick-arrow:after, .slick-animated-slider .slick-arrow:before{
+  content: ''; width:20px; height:4px; left:50%; top:50%; margin-left:-10px; position: absolute; background: #000;
+}
+.slick-animated-slider .slick-arrow.slick-prev:after{
+  margin-top: -7px; transform: rotate(-40deg);
+}
+.slick-animated-slider .slick-arrow.slick-prev:before{
+  margin-top: 4px; transform: rotate(40deg);
+}
+.slick-animated-slider .slick-arrow.slick-next:after{
+  margin-top: -7px; transform: rotate(40deg);
+}
+.slick-animated-slider .slick-arrow.slick-next:before{
+  margin-top: 4px; transform: rotate(-40deg);
+}
+.slick-animated-slider .slick-arrow.slick-prev{
+  left:0px;
+}
+.slick-animated-slider .slick-arrow.slick-next{
+  right:0px;
+}
+
+
+
+
+.parallaxator {
+  overflow: hidden;
+  position: relative;
+}
+.parallaxator > .parallax_child {
+  position: absolute;
+  top: 0;
+}
+
+
+.container{ width:100%; max-width:1200px; margin:0px auto; }
