--- a/HTML/assets/css/slick-custom.css
+++ b/HTML/assets/css/slick-custom.css
@@ -5,7 +5,9 @@ font-family: 'Raleway', sans-serif;
 */
 
 
-*{ margin:0px; padding:0px; }
+*{ 
+  margin:0px; padding:0px; 
+}
 .slick-animated-slider .slick-slide{
     height:800px; overflow: hidden; font-family: 'Roboto Slab', serif;
 }
@@ -17,14 +19,9 @@ font-family: 'Raleway', sans-serif;
 }
 .slick-animated-slider .slick-slide .animatedBg{
   width:100%; height:100%; object-fit: cover;
-}
-/* .slick-active */
-.slick-animated-slider .slick-slide .animatedBg{
-  -webkit-animation: mymove 35s linear;  /* Safari 4.0 - 8.0 */ animation: mymove 35s linear;
+  -webkit-animation: animatedBg 35s linear; animation: animatedBg 35s linear; animation-iteration-count: infinite; -webkit-animation-iteration-count: infinite;
   /*-webkit-animation-fill-mode: forwards; /* Safari 4.0 - 8.0 */ /*animation-fill-mode: forwards;*/
-  animation-iteration-count: infinite; -webkit-animation-iteration-count: infinite;
 }
-
 .slick-animated-slider .slick-slide .slick-content-area{
     width:100%; position: absolute; z-index: 2; top:50%; left:0px; transform: translate(0px, -50%); -webkit-transform: translate(0px, -50%); text-align: center;
 }
@@ -41,21 +38,7 @@ font-family: 'Raleway', sans-serif;
   display: inline-block; padding:12px 35px; font-size:16px; background: rgb(17, 92, 161); border-radius:50px; color:#fff; font-family: 'Raleway', sans-serif; text-decoration: none;
 }
 
-@-webkit-keyframes mymove {
-  0% { transform: scale(1.0, 1.0);}
-  50% {transform: scale(1.3, 1.3); }
-  100% { transform: scale(1.0, 1.0);}
-}
-
-/* Standard syntax */
-@keyframes mymove {
-  0% { transform: scale(1.0, 1.0);}
-  50% {transform: scale(1.3, 1.3); }
-  100% { transform: scale(1.0, 1.0);}
-}
-
-
-/* slider nav css */
+/* slick-dot css */
 .slick-animated-slider .slick-dots{
   position: absolute; bottom:10px; left:50%; transform: translate(-50%, 0px); -webkit-transform: translate(-50%, 0px); z-index: 1;
 }
@@ -70,7 +53,7 @@ font-family: 'Raleway', sans-serif;
   background-color: #24f5fb;
 }
 
-
+/* slick-nav css */
 .slick-animated-slider .slick-arrow{
   width:40px; height:40px; position: absolute; z-index: 1; top:50%; margin-top:-20px; background:transparent; color:transparent; border:none; overflow: hidden; outline: none; cursor: pointer;
 }
@@ -96,17 +79,21 @@ font-family: 'Raleway', sans-serif;
   right:0px;
 }
 
-
-
-
-.parallaxator {
-  overflow: hidden;
-  position: relative;
+/* parallax image css */
+.slick-animated-slider .parallaxator {
+  overflow: hidden; position: relative;
 }
-.parallaxator > .parallax_child {
-  position: absolute;
-  top: 0;
+.slick-animated-slider .parallaxator > .parallax_child {
+  position: absolute; top: 0;
 }
 
+/* animate image keyframe animation css */
+@-webkit-keyframes animatedBg {
+  0% { transform: scale(1.0, 1.0);} 50% {transform: scale(1.3, 1.3); } 100% { transform: scale(1.0, 1.0);}
+}
+@keyframes animatedBg {
+  0% { transform: scale(1.0, 1.0);} 50% {transform: scale(1.3, 1.3); } 100% { transform: scale(1.0, 1.0);}
+}
 
+/* extra css */
 .container{ width:100%; max-width:1200px; margin:0px auto; }
