--- a/HTML/html-v5/assets/css/custom.css
+++ b/HTML/html-v5/assets/css/custom.css
@@ -1,3 +1,40 @@
+* { padding: 0px; margin: 0px; outline: none; }
+
+/* placeholder and Selection css */
+::selection { color: #fff; background: #2c2c2c; }
+
+::-moz-selection { color: #fff; background: #2c2c2c; }
+
+::-webkit-input-placeholder { color: #2c2c2c; text-overflow: ellipsis; font-size: 16px; }
+
+::-moz-placeholder { color: #2c2c2c; text-overflow: ellipsis; opacity: 0.5; font-size: 16px; }
+
+:-ms-input-placeholder { color: #2c2c2c; text-overflow: ellipsis; opacity: 0.5; font-size: 16px; }
+
+/* body css property */
+body, html { height: 100%; -moz-osx-font-smoothing: grayscale; }
+
+body { font-family: 'Open Sans', sans-serif; height: 100%; font-size: 15px; line-height: 26px; font-weight: 400; -webkit-font-smoothing: antialiased; -moz-font-smoothing: antialiased; -ms-font-smoothing: antialiased; }
+
+h1, h2, h3, h4, h5, h6 { margin-top: 0px; }
+
+p { margin: 0 0 25px; font-size: 18px; line-height: 28px; }
+
+b, strong { font-weight: 600; }
+
+ul, ol, dl { list-style-position: outside; margin-bottom: 15px; padding: 0px; list-style: none; }
+
+/* video and audio */
+img { max-width: 100%; height: auto; }
+
+video { background-size: cover; display: table-cell; vertical-align: middle; width: 100%; }
+
+iframe { border: 0; }
+
+a, a:hover, a:focus { text-decoration: none; }
+
+a:hover, a:active { text-decoration: none; }
+
 header{ width:100%; float:left; position: relative; z-index:2; transition: -webkit-transform .3s ease; transition: transform .3s ease; }
 .hdrTop{ width:100%; padding:20px 0px; float:left; background:rgba(0, 255, 0, 0.2); }
 .hdrBtm{ width:100%; padding:0px; float:left; position: relative; background:rgba(0, 255, 255, 0.7); }
@@ -21,4 +58,8 @@ nav.bootsnav .megamenu-content .title{ font-size: 14px; text-transform: uppercas
 .thumbnail-info-box .image-overlay{ width:100%; height:100%; position: absolute; display: flex; -webkit-display: flex; -ms-display: flex; align-items:center; justify-content: center; top:0px; right:0px; overflow: hidden; background: rgba(0,0,0,0.4); text-align: center; }
 .thumbnail-info-box .image-link-icon{  width:50px; height:50px;  display: inline-block; border:#f5d835 2px solid; border-radius: 100%; position: absolute; top:50%; left:50%; transform: translate(-50%, -50%); -webkit-transform: translate(-50%, -50%); -ms-transform: translate(-50%, -50%); z-index: 1; }
 .thumbnail-info-box .content-box{ width:100%; min-height: 100px; padding:20px; position: relative; }
+.thumbnail-info-box .content-box h3{ font-size: 18px; line-height: 1.4; font-weight: 600; color:#002147; }
+.thumbnail-info-box .content-box h3 a{ color:#002147; }
+.thumbnail-info-box .content-box h3:hover a{ color:#fdc800; }
+.thumbnail-info-box .content-box p{ color:#5a5a5a; }
 
